# ML-on-AWS-1

./: .gitignore  Dockerfile  README.md  local_testing.ipynb  pyproject.toml  test.ipynb
data/: example-s3-file.json
src/: GuardianAPI-test.py  app.py
src/lambda_/: lambda_function.py  lambda_function_guardian.py  make_layer.sh
